# Interior-Distance-Fields

./: CMakeLists.txt  README.md
IDF/: CMakeLists.txt
IDF/include/: barycentricCoords.h  frep2D.h  frep3D.h  interiorDistanceField.h  render.h  timer.hpp
IDF/src/: barycentricCoords.cpp  frep2D.cpp  frep3D.cpp  interiorDistanceField.cpp  render.cpp
include/: barycentricCoords.h  frep2D.h  frep3D.h  interiorDistanceField.h
samples/: CMakeLists.txt  barycentricTest.cpp  diffMapsTest.cpp  idfClassTest.cpp  idfTest.cpp  triangulationTestCGAL.cpp  triangulationTestIGL.cpp
src/: frep2D.cpp  frep3D.cpp  interiorDistanceField.cpp
